--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+# Configurações do H2
+spring.datasource.url=jdbc:h2:file:./data/estoque
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# Habilitar o console H2 para acessar o banco de dados via navegador
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Configurações Springdoc 
+springdoc.api-docs.path=/api-docs
